Sucessful build using Scully and includes static index.html file

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<!-- <mat-toolbar color='primary'> -->
+    <h1 class = "center-text">My Blog</h1>
+<!-- </mat-toolbar> -->
+  
