Sucessfull Material Component Usage

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
-    <h4 class='center-text'>Anshuman Kumar</h4>
-<!-- </footer> -->
+<footer class='footer'>
+    <h4 class='center-text'>Anshuman Kumar </h4>
+</footer>
   
