--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,3 +3,7 @@
     margin-right: auto;
     font-family:'Courier New', Courier, monospace;
 }
+.mat-toolbar {
+    background: teal;
+    color: #fff
+ }
