--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-toolbar color='primary'> -->
-    <h1 class = "center-text">My Blog</h1>
-<!-- </mat-toolbar> -->
+<mat-toolbar color='red'>
+    <h1 class = 'center-text'>My Blog</h1>
+</mat-toolbar>
   
