Refactored Code Add Header/Footer Component Add Material Module but still need to add more components for future use Add routing and other components

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,3 @@
-.center-text{
-    margin-left: auto;
-    margin-right: auto;
-    font-family:'Courier New', Courier, monospace;
-}
-.mat-toolbar {
-    background: teal;
-    color: #fff
- }
+.spacer {
+    flex: 1 1 auto;
+  }
