--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-header></app-header>
-<app-footer></app-footer>
+<app-header> </app-header>
+
+    
+    <!-- <mat-sidenav-container>
+    <mat-sidenav #sidenav mode="side" opened class="app-sidenav">
+      <!-- Sidenav Menu -->
+    <!-- </mat-sidenav> -->
+    
+    <div class="container"> 
+      <router-outlet></router-outlet>
+    </div>
+    <!-- </mat-sidenav-container> -->
