--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,21 @@
-<mat-toolbar color='red'>
-    <h1 class = 'center-text'>My Blog</h1>
+<!-- <mat-toolbar color="primary" class="mat-elevation-z4">
+    <span>
+      <span class="logo">
+        <img src="assets/favicon.ico" alt="Logo">
+      </span>
+      <span class="spacer">
+        
+      </span>
+    </span>
+    <span class="spacer"></span>
+</mat-toolbar> -->
+<mat-toolbar color="primary" class="mat-elevation-z4">
+    <button mat-icon-button>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="logo">
+        <img src="assets/favicon.ico" alt="Logo">
+    </span>
+    <span class="spacer">{{ title }}</span>
 </mat-toolbar>
   
