--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,1 +1,8 @@
-<p>aboutme works!</p>
+<div class="main">
+    <div class="left" #leftPanel fxFlex="25%">
+
+          
+    </div>
+    <div class="separator" #separator></div>
+    <div class="right" #rightPanel></div>
+  </div>
