--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 .spacer {
     flex: 1 1 auto;
-  }
+    text-align: center;
+    font-size: 150%;
+    font-family: 'Courgette', cursive; 
+}
+.mat-toolbar {
+  background: rgb(231, 239, 225);
+  color: black;
+}
