--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,8 +1,24 @@
-<div class="main">
-    <div class="left" #leftPanel fxFlex="25%">
+<div class="split left">
+  <div class="centered">
+    <app-intro> </app-intro>
 
-          
-    </div>
-    <div class="separator" #separator></div>
-    <div class="right" #rightPanel></div>
   </div>
+</div>
+
+<div class="split right">
+  <div class="centered">
+    <mat-card class="intro-card" >
+      <mat-card-content>
+        <p class="mat-h1">
+          Hi everyone my name is  
+        </p>
+        <p class="mat-display-2">
+          Anshuman Kumar
+        </p>
+        <p class="mat-h1">
+         I am a Software Engineer
+        </p>
+      </mat-card-content>
+  </mat-card>
+  </div>
+</div> 
