--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,15 @@
 
 <mat-toolbar color="primary" class="mat-elevation-z4">
   <mat-toolbar-row>
-    <span class="spacer"> <h1>{{ title }} </h1> </span> 
+    <span class="spacer"> {{ title }}</span> 
     <span class="logo">
       <img src="assets/favicon.ico" alt="Logo">
   </span>
   </mat-toolbar-row>
   <mat-toolbar-row>
-    <a mat-button routerLink="/aboutme" routerLinkActive='active'><span class="fa fa-home fa-lg"></span> About Me </a>
-    <a mat-button routerLink='/posts' routerLinkActive='active'><span class="fa fa-info fa-lg"></span> My Two Cents</a>
-    <a mat-button routerLink="/contactme" routerLinkActive='active'><span class="fa fa-address-card fa-lg"></span> Contact Me</a>
+    <a mat-button routerLink="/aboutme" routerLinkActive='active'><span class="toolbar" > About Me</span>  </a>
+    <a mat-button routerLink='/posts' routerLinkActive='active'><span class="toolbar"> My Two Cents</span> </a>
+    <a mat-button routerLink="/contactme" routerLinkActive='active'><span class="toolbar"> Contact Me</span> </a>
   </mat-toolbar-row>
 
 </mat-toolbar>
