--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -1,7 +1,4 @@
-.example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
-  .portfolio{
+.portfolio{
     border-radius: 50px;
-  }
+    border-end-end-radius: 50px;
+}
