--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,24 +1,19 @@
-<div class="split left">
-  <div class="centered">
-    <app-intro> </app-intro>
+<div class="content">
+  <!-- <div class="heading">
+     <div class="header-text">The New's Times</div>
+     </div> -->
+  <div class="row">
+     <div class="item large-item">
+        <div class="sub-header">Anshuman Kumar</div>
+        <div class="text">
+          Software Engineer <br/>
+          Studied Computer Science at MIT Manipal, Batch of 2020 <br/>
+          Worked with Angular, NodeJS, HTML, CSS <br/>
+        </div>
+     </div>
+     <div class="item large-item">
+           <app-intro> </app-intro>        
+     </div>
 
   </div>
 </div>
-
-<div class="split right">
-  <div class="centered">
-    <mat-card class="intro-card" >
-      <mat-card-content>
-        <p class="h1">
-          Hi everyone my name is  
-        </p>
-        <p class="display-2">
-          Anshuman Kumar
-        </p>
-        <p class="h1">
-         I am a Software Engineer
-        </p>
-      </mat-card-content>
-  </mat-card>
-  </div>
-</div> 
