--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,2 +1,2 @@
-    <img mat-card-image src="https://storage.googleapis.com/www.anshumankumar.dev/assets/squarepic50.jpg" alt="Anshuman Kumar" class="portfolio">
+    <img src="https://storage.googleapis.com/www.anshumankumar.dev/assets/squarepic50.jpg" alt="Anshuman Kumar" class="sub-header-image">
      
