Change verbiage and update package.json
Fix legacy peer deps issue

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,11 +4,14 @@
      </div> -->
   <div class="row">
      <div class="item large-item">
-        <div class="sub-header">Anshuman Kumar</div>
+      <div class="sub-header">About Me</div>
         <div class="text">
-          Software Engineer <br/>
-          Studied Computer Science at MIT Manipal, Batch of 2020 <br/>
-          Worked with Angular, NodeJS, HTML, CSS <br/>
+          I am a software engineer<br/>
+          I currently work in Quantiphi<br/>
+          Alma Mater: Manipal Institute of Technology, Manipal<br/>
+          My hobbies include cycling, weight lifting, investing in stocks and cooking.<br/>
+          I also like to take pictures, though I am probably not that good at it.<br/>
+          
         </div>
      </div>
      <div class="item large-item">
