Fix Various CSS Issues

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,22 +1,40 @@
 <div class="content">
-  <!-- <div class="heading">
-     <div class="header-text">The New's Times</div>
-     </div> -->
   <div class="row">
-     <div class="item large-item">
-      <div class="sub-header">About Me</div>
-        <div class="text">
-          I am a software engineer<br/>
-          I currently work in Quantiphi<br/>
-          Alma Mater: Manipal Institute of Technology, Manipal<br/>
-          My hobbies include cycling, weight lifting, investing in stocks and cooking.<br/>
-          I also like to take pictures, though I am probably not that good at it.<br/>
-          
+    <div class="item small-item">
+      <div class="sub-header">Student Learns HTML</div>
+      <div class="text"></div>
+    </div>
+    <div class="item large-item">
+      <div>
+        <div class="sub-header">Me somewhere near Natu La Pass</div>
+        <div class="personal-image-container">
+          <div>
+            <img
+              class="personal-image"
+              src="https://storage.googleapis.com/www.anshumankumar.dev/assets/20220811_125554.jpg"
+            />
+          </div>
         </div>
-     </div>
-     <div class="item large-item">
-           <app-intro> </app-intro>        
-     </div>
-
+        <div class="text">
+          This is when I visited Natu La Pass in the year,2021. You can view
+          some of the pictures I took on this link here
+          <a href="https://unsplash.com/@anshumankmr97" class="anchor-tag">
+            my pictures here</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="item small-item">
+      <div class="sub-header">CSS Is Apparently a Thing</div>
+      <div class="text">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum."
+      </div>
+    </div>
   </div>
 </div>
