--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,2 +1,5 @@
-    <img src="https://storage.googleapis.com/www.anshumankumar.dev/assets/squarepic50.jpg" alt="Anshuman Kumar" class="sub-header-image">
-     
+<img
+  src="https://storage.googleapis.com/www.anshumankumar.dev/assets/squarepic50.jpg"
+  alt="Anshuman Kumar"
+  class="sub-header-image"
+/>
