--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -1,4 +1,4 @@
-body{
+body {
   display: flex;
   flex-direction: column;
 }
@@ -11,37 +11,38 @@ body{
   align-items: center;
 }
 .header-text {
-  font-family: 'Cedarville Cursive', cursive;
+  font-family: "Cedarville Cursive", cursive;
   display: flex;
   font-size: xxx-large;
-} 
+}
 .heading {
   display: flex;
   justify-content: center;
 }
-.row{
+.row {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
-.item{
+.item {
   display: flex;
   flex-direction: column;
-
 }
-.large-item{
-  max-width:50%;
+.large-item {
+  max-width: 50%;
 }
-.small-item{
+.small-item {
   max-width: 25%;
 }
-.x-large-item{
-  width:75%;
+.x-large-item {
+  width: 75%;
 }
-.sub-header{
+.sub-header {
   font-style: italic;
   justify-content: center;
   display: flex;
-  font-size:x-large;
+  font-size: x-large;
+  word-break: break-all;
 }
 .text {
   margin-left: 1%;
@@ -63,29 +64,36 @@ body{
   width: auto;
   height: auto;
 }
-.sub-header-image {
-  width:50px;
-  height:50px;
+.personal-image {
+  width: 100%;
+  height: 100%;
 }
-.type1{
+.personal-image-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+.type1 {
   background-color: yellow;
 }
-.type2{
+.type2 {
   background-color: powderblue;
 }
-.type3{
+.type3 {
   background-color: greenyellow;
 }
-.type4{
+.type4 {
   background-color: blue;
 }
-.type5{
+.type5 {
   background-color: purple;
 }
-.left, .right {
+.left,
+.right {
   flex: 1;
   display: flex;
 }
-.center{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+.center {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
