--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -16,10 +16,9 @@
           </div>
         </div>
         <div class="text">
-          This is when I visited Natu La Pass in the year,2021. You can view
-          some of the pictures I took on this link here
-          <a href="https://unsplash.com/@anshumankmr97" class="anchor-tag">
-            my pictures here</a
+          {{ imageCaption }}
+          <a href="https://unsplash.com/@anshumankmr97" class="anchor-tag"
+            >here</a
           >
         </div>
       </div>
