Fix CSS Rules, Add Gradient Color

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,12 +1,12 @@
 <div class="content">
   <div class="row">
     <div class="item small-item">
-      <div class="sub-header">Student Learns HTML</div>
-      <div class="text"></div>
+      <div class="text sub-header">{{ introductionTitle }}</div>
+      <div class="text">{{ introductionText }}</div>
     </div>
     <div class="item large-item">
       <div>
-        <div class="sub-header">Me somewhere near Natu La Pass</div>
+        <div class="text sub-header">Me somewhere near Natu La Pass</div>
         <div class="personal-image-container">
           <div>
             <img
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="item small-item">
-      <div class="sub-header">CSS Is Apparently a Thing</div>
+      <div class="text sub-header">CSS Is Apparently a Thing</div>
       <div class="text">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
