--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -7,11 +7,16 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: rgb(231, 239, 225);
+  background-color: rgb(28, 29, 76);
+  background: radial-gradient(
+    circle,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+
   align-items: center;
 }
 .header-text {
-  font-family: "Cedarville Cursive", cursive;
   display: flex;
   font-size: xxx-large;
 }
@@ -51,7 +56,7 @@ body {
   overflow-wrap: anywhere;
 }
 .topic {
-  font-family: sans-serif;
+  font-family: "Lato", sans-serif;
   height: 20%;
   font-size: large;
   display: flex;
@@ -73,27 +78,9 @@ body {
   display: flex;
   justify-content: center;
 }
-.type1 {
-  background-color: yellow;
-}
-.type2 {
-  background-color: powderblue;
-}
-.type3 {
-  background-color: greenyellow;
-}
-.type4 {
-  background-color: blue;
-}
-.type5 {
-  background-color: purple;
-}
+
 .left,
 .right {
   flex: 1;
   display: flex;
-}
-.center {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
 }
