--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,16 @@
 html,
 body {
   margin: 0;
-  font-family: "Playfair Display", serif;
+  font-family: "Lato", sans-serif;
   height: 100%;
   display: flex;
   flex-direction: column;
+  background: rgb(28, 29, 76);
+  background: radial-gradient(
+    circle,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
 .content {
   display: flex;
@@ -14,15 +20,7 @@ body {
   width: 100%;
   height: 100%;
 }
-.header-text {
-  font-family: "Cedarville Cursive", cursive;
-  display: flex;
-  font-size: xxx-large;
-}
-.heading {
-  display: flex;
-  justify-content: center;
-}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -49,12 +47,7 @@ body {
   display: flex;
   font-size: x-large;
 }
-.text {
-  margin-left: 1%;
-  margin-right: 1%;
-  display: flex;
-  overflow-wrap: anywhere;
-}
+
 .topic {
   font-family: sans-serif;
   height: 20%;
@@ -69,31 +62,9 @@ body {
   width: auto;
   height: auto;
 }
-.sub-header-image {
-  width: 50px;
-  height: 50px;
+.text {
+  color: white;
 }
-.type1 {
-  background-color: yellow;
-}
-.type2 {
-  background-color: powderblue;
-}
-.type3 {
-  background-color: greenyellow;
-}
-.type4 {
-  background-color: blue;
-}
-.type5 {
-  background-color: purple;
-}
-.left,
-.right {
-  flex: 1;
-  display: flex;
-}
-.center {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+.dark-text {
+  color: black;
 }
