--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,39 +1,12 @@
-<div class="content">
-  <div class="row">
-    <div class="item small-item">
-      <div class="text sub-header">{{ introductionTitle }}</div>
-      <div class="text">{{ introductionText }}</div>
-    </div>
-    <div class="item large-item">
-      <div>
-        <div class="text sub-header">Me somewhere near Natu La Pass</div>
-        <div class="personal-image-container">
-          <div>
-            <img
-              class="personal-image"
-              src="https://storage.googleapis.com/www.anshumankumar.dev/assets/20220811_125554.jpg"
-            />
-          </div>
-        </div>
-        <div class="text">
-          {{ imageCaption }}
-          <a href="https://unsplash.com/@anshumankmr97" class="anchor-tag"
-            >here</a
-          >
-        </div>
-      </div>
-    </div>
-    <div class="item small-item">
-      <div class="text sub-header">CSS Is Apparently a Thing</div>
-      <div class="text">
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum."
-      </div>
-    </div>
-  </div>
-</div>
+<section id="intro">
+  <p class="name">Hi, my name is <span>Anshuman Kumar</span></p>
+  <h2>I am a tech enthusiast.</h2>
+  <p>
+    I'm a developer specializing in HTML, CSS, user experience,Javascript,
+    Python, React,Angular.
+  </p>
+  <p>
+    Currently, I'm working for <a href="https:quantiphi.com"> Quantiphi</a> as
+    Software Developer.
+  </p>
+</section>
