--- a/src/app/contactme/contactme.component.html
+++ b/src/app/contactme/contactme.component.html
@@ -1,1 +1,18 @@
-<p>This Page is Under Construction</p>
+<section class="contact">
+  <div class="contact-me">
+    <div class="contact-me-content">
+      <h2>Contact Me</h2>
+    </div>
+    <div>
+      <p>
+        I am passionate about talking with like minded people.Feel Free to Write
+        me an Email about Collaborations, Job Offers.
+      </p>
+    </div>
+    <div>
+      <button id="contact-me-button" class="button">
+        <a href="mailto:anshumankumar.mail@gmail.com">Email Me</a>
+      </button>
+    </div>
+  </div>
+</section>
