Bugfixes and Stability Improvements

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -6,7 +6,7 @@
     Python, React,Angular.
   </p>
   <p>
-    Currently, I'm working for <a href="https:quantiphi.com"> Quantiphi</a> as
+    Currently, I'm working for <a href="https://quantiphi.com"> Quantiphi</a> as
     Software Developer.
   </p>
 </section>
