--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,9 @@
           <span class="sr-only">Github</span>
         </a>
       </li>
-      <li><a href="#resume" class="button">Resume</a></li>
+      <li>
+        <a href="../../assets/AnshumanKumarResume.pdf" class="button">Resume</a>
+      </li>
     </ul>
   </nav>
 </section>
