--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,12 +2,10 @@
   <nav>
     <ul class="horizontal-navbar-list">
       <li>
-        <a href="/aboutme">
-          <span class="fa-solid fa-atom"></span>Anshuman Kumar</a
-        >
+        <a href="/"> <span class="fa-solid fa-atom"></span>Anshuman Kumar</a>
       </li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/aboutme">About</a></li>
+      <li><a href="/">About</a></li>
       <li><a href="/contactme">Contact</a></li>
       <li>
         <a href="https://www.linkedin.com/in/anshumankumarcs/">
