--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -1,3 +1,16 @@
 #intro {
-  height: 800px;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+}
+
+.personal-image {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+@media (min-width: 500px) {
+  #intro {
+    height: 800x;
+  }
 }
