--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
       <li>
         <a href="/"> <span class="fa-solid fa-atom"></span>Anshuman Kumar</a>
       </li>
-      <li><a href="/projects">Projects</a></li>
+      <li><a href="/blogs">Blogs</a></li>
       <li><a href="/">About</a></li>
       <li><a href="/contactme">Contact</a></li>
       <li>
