--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,1 +1,17 @@
-<p>This Page is Under Construction!</p>
+<body class="blog-component">
+  <mat-card *ngFor="let blog of blogs">
+    <mat-card-header>
+      <mat-card-title class="card-header-text"><h3>{{ blog.attributes.Title }}</h3></mat-card-title>
+      <mat-card-subtitle>{{ blog.attributes.date }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      {{ !blog.collapsed? blog.attributes.Content.slice(0,150) + '...': blog.attributes.Content }}</mat-card-content>
+    <mat-card-actions>
+        <button mat-button (click)="blog.collapsed=!blog.collapsed">
+          {{ !blog.collapsed? "Read More": "Collapse" }}
+        </button>
+    </mat-card-actions>
+    <mat-divider [inset]="true"></mat-divider>
+  </mat-card>
+  
+</body>
