--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -4,7 +4,7 @@
   flex-direction: column-reverse;
   align-items: center;
 }
-.mat-card {
+.mat-mdc-card {
   flex-direction: column;
   display: flex;
   width: 50%;
@@ -13,27 +13,27 @@
   border-radius: 10px;
   margin-bottom: 50px;
 }
-.mat-card:first-child {
+.mat-mdc-card:first-child {
   margin-bottom: 20px !important;
 }
-.mat-card-header{
+.mat-mdc-card-header{
   background-color: var(--dkblue);
     padding:5px ;
     font-family: var(--sans);
     color: var(--aqua);
     border-radius: 10px;
 }
-.mat-card-subtitle {
+.mat-mdc-card-subtitle {
   background-color: var(--dkblue);
     font-family: var(--sans);
     color: var(--aqua);
 }
-.mat-card{
+.mat-mdc-card{
     padding:0;
     max-width: fit-content;
 }
   
-.mat-card-content{
+.mat-mdc-card-content{
     margin:0px ;
     background-color: var(--black);
     font-family: var(--sans);
@@ -43,7 +43,7 @@
     font-size: 1rem;
     line-height: 1.5;
 }
-.mat-card-actions {
+.mat-mdc-card-actions {
   background-color: var(--black);
   font-family: var(--sans);
   color: var(--white);
@@ -52,10 +52,10 @@
   margin-right: 0px;
   padding: 0px;
 }
-.mat-divider {
+.mat-mdc-divider {
   background-color: var(--dkblue);
 }
-.mat-card-actions button{
+.mat-mdc-card-actions button{
   font-family: var(--sans);
   color: var(--white);
 }
