--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -4,8 +4,14 @@
       <mat-card-title class="card-header-text"><h3>{{ blog.attributes.Title }}</h3></mat-card-title>
       <mat-card-subtitle>{{ blog.attributes.date }}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
-      {{ !blog.collapsed? blog.attributes.Content.slice(0,150) + '...': blog.attributes.Content }}</mat-card-content>
+    <mat-card-content *ngIf="!blog.collapsed">
+      {{blog.attributes.Content.slice(0,150) + '...'}}
+    </mat-card-content>
+    <mat-card-content *ngIf="blog.collapsed">
+      <markdown>
+        {{blog.attributes.Content }}
+      </markdown>
+    </mat-card-content>
     <mat-card-actions>
         <button mat-button (click)="blog.collapsed=!blog.collapsed">
           {{ !blog.collapsed? "Read More": "Collapse" }}
