--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,4 @@
-<div class="blog-component">
+<div class="blog-component" *ngIf="this.loading">
   <mat-card *ngFor="let blog of blogs">
     <mat-card-header>
       <mat-card-title class="card-header-text"><h3>{{ blog.attributes.Title }}</h3></mat-card-title>
@@ -19,4 +19,21 @@
     </mat-card-actions>
     <mat-divider [inset]="true"></mat-divider>
   </mat-card>
+</div>
+<div class="blog-component" *ngIf="!this.loading">
+  <div class="loader loader--style2" title="1">
+    <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+    <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
+      <animateTransform attributeType="xml"
+        attributeName="transform"
+        type="rotate"
+        from="0 25 25"
+        to="360 25 25"
+        dur="0.6s"
+        repeatCount="indefinite"/>
+      </path>
+    </svg>
+  </div>
+  
 </div>
