--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,10 +2,12 @@
   <mat-card *ngFor="let blog of blogs">
     <mat-card-header>
       <mat-card-title class="card-header-text"><h3>{{ blog.attributes.Title }}</h3></mat-card-title>
-      <mat-card-subtitle>{{ blog.attributes.date }}</mat-card-subtitle>
+      <mat-card-subtitle><b>Published On</b>: {{ blog.attributes.date }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content *ngIf="!blog.collapsed">
-      {{blog.attributes.Content.slice(0,150) + '...'}}
+      <article>
+        {{blog.attributes.Content.slice(0,150) + '...'}}
+      </article>
     </mat-card-content>
     <mat-card-content *ngIf="blog.collapsed">
       <markdown>
