--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,7 +1,7 @@
 <div class="blog-component" *ngIf="this.loading">
   <mat-card *ngFor="let blog of blogs">
     <mat-card-header>
-      <mat-card-title class="card-header-text"><h3>{{ blog.attributes.Title }}</h3></mat-card-title>
+      <mat-card-title class="card-header-text" routerLink="{{'/article/' + blog.attributes.articleId }}"><h3>{{ blog.attributes.Title }}</h3></mat-card-title>
       <mat-card-subtitle><b>Published On</b>: {{ blog.attributes.date }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content *ngIf="!blog.collapsed">
