Fix Central Blogs view using styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -212,3 +212,7 @@ footer [class*="fa-"] {
     margin: 0 auto;
   }
 }
+mat-card-content  markdown  img {
+  height: auto !important;
+  width: 100% !important;
+}
