--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -9,7 +9,13 @@
           {{blog.attributes.Content }}
         </markdown>
       </mat-card-content>
-      
+      <mat-card-actions>
+        <button mat-button data-href="websiteUrl"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{websiteUrl}}&amp;src=sdkpreparse"><i class="fa-brands fa-facebook-f"></i></a></button> 
+        <button mat-button data-href="websiteUrl"><a target="_blank" href="https://twitter.com/intent/tweet?text={{blog.attributes.Title}} {{websiteUrl}}">
+          <i class="fa-brands fa-twitter"></i>
+        </a></button> 
+
+     </mat-card-actions>
       <mat-divider [inset]="true"></mat-divider>
     </mat-card>
   </div>
