--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -11,7 +11,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button data-href="websiteUrl"><a target="_blank" href="https://twitter.com/intent/tweet?text={{blog.attributes.Title}} {{websiteUrl}}">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-x-twitter"></i>
         </a></button>
         <button mat-button data-href="websiteUrl"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{websiteUrl}}&amp;src=sdkpreparse"><i class="fa-brands fa-facebook-f"></i></a></button> 
      </mat-card-actions>
