--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -13,8 +13,11 @@
         <button mat-button data-href="websiteUrl"><a target="_blank" href="https://twitter.com/intent/tweet?text={{blog.attributes.Title}} {{websiteUrl}}">
           <i class="fa-brands fa-x-twitter"></i>
         </a></button>
-        <button mat-button data-href="websiteUrl"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{websiteUrl}}&amp;src=sdkpreparse"><i class="fa-brands fa-facebook-f"></i></a></button> 
-     </mat-card-actions>
+        <button mat-button>
+          <a target="_blank" [attr.href]="'https://www.facebook.com/sharer/sharer.php?u=' + websiteUrl + '&amp;src=sdkpreparse'">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+        </button>     </mat-card-actions>
       <mat-divider [inset]="true"></mat-divider>
     </mat-card>
   </div>
