--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -3,6 +3,25 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  min-height: 500px;
+  position: relative; /* new addition */
+
+}
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loader svg {
+  width: 40px;
+  height: 40px;
+}
+@media screen and (min-width: 1024px) {
+  .loader svg {
+    width: 200px;
+    height: 200px;
+  }
 }
 .mat-mdc-card {
   flex-direction: column;
