--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <a href="/"> <span class="fa-solid fa-atom"></span>Anshuman Kumar</a>
       </li>
       <li><a href="/blogs">Blogs</a></li>
-      <li><a href="/">About</a></li>
+      <li><a href="/aboutme">About</a></li>
       <li><a href="/contactme">Contact</a></li>
       <li>
         <a href="https://www.linkedin.com/in/anshumankumarcs/">
