--- a/src/app/contactme/contactme.component.html
+++ b/src/app/contactme/contactme.component.html
@@ -6,7 +6,7 @@
     <div>
       <p>
         I am passionate about talking with like minded people.Feel Free to Write
-        me an Email about Collaborations, Job Offers.
+        me an Email.
       </p>
     </div>
     <div>
