Add Strava Integration

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -6,4 +6,7 @@
     Python, React,Angular.
   </p>
   <p [innerHTML]="aboutMe" class="about-me-text"></p>
+  <section *ngIf="flag">
+    <iframe height='160' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/34639203/activity-summary/55aab79d3b61cb1174268222ef82b6037a7f2268'></iframe>
+  </section>
 </section>
