Add Profile Picture to Front

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,10 +1,9 @@
 <section id="intro">
+  <img src="https://storage.googleapis.com/www.anshumankumar.dev/assets/IMG_5144.JPG" alt="Anshuman Kumar's Profile Picture" class="profile-picture">
   <p class="name" [innerHTML]="myNameIs"></p>
   <h2>I am a tech enthusiast.</h2>
   <p class="about-me-text">
-    I'm a developer specializing in HTML, CSS, user experience,Javascript,
-    Python, React,Angular.
-  </p>
+    I am an AI Consultant based in Bangalore. I specialize in crafting intelligent chat and voice bots that engage users and provide valuable insights. My expertise lies in Google Cloud, Machine Learning, and creating seamless user experiences.  </p>
   <p [innerHTML]="aboutMe" class="about-me-text"></p>
   <section *ngIf="flag">
     <iframe height='160' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/34639203/activity-summary/55aab79d3b61cb1174268222ef82b6037a7f2268'></iframe>
