Remove Key word Developer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section class="footer">
   <footer>
     <ul>
-      <li>Anshuman Kumar &middot; Developer</li>
+      <li>Anshuman Kumar</li>
       <li>
         <a href="https://www.linkedin.com/in/anshumankumarcs/">
           <span class="fa-brands fa-linkedin-in"></span>
